# elder

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: main.yml
apps/editor/: Cargo.toml
apps/editor/src/: editor.rs  main.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs
crates/audio/: Cargo.toml
crates/ecs/: Cargo.toml
crates/ecs/benches/: benchmarks.rs
crates/ecs/examples/: cubes.rs
crates/ecs/src/: lib.rs  resource.rs  vec.rs  world.rs
crates/graphics/: Cargo.toml
crates/math/src/: equality.rs  lib.rs  vector.rs
crates/physics/: Cargo.toml
crates/physics/examples/: ballistics.rs
crates/physics/src/: lib.rs  particle.rs  vec.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs  state.rs
src/: lib.rs
